--- a/.github/workflows/docs_build.yaml
+++ b/.github/workflows/docs_build.yaml
@@ -25,3 +25,6 @@ jobs:
         with:
           name: specification
           path: docs/specification/index.pdf
+      - uses: stefanzweifel/git-auto-commit-action@v4
+        with:
+          commit_message: Update latex sources
