--- a/.github/workflows/docs_build.yaml
+++ b/.github/workflows/docs_build.yaml
@@ -18,6 +18,8 @@ jobs:
         run: |
           sudo apt install texlive-latex-extra texlive-bibtex-extra
           sudo npm install -g gdoc2latex
+
+      # Specification
       - name: Build specification
         run: ./build.sh specification/index
         working-directory: docs
@@ -25,6 +27,16 @@ jobs:
         with:
           name: specification
           path: docs/specification/index.pdf
+
+      # Progress report
+      - name: Build progress report
+        run: ./build.sh progressreport/index
+        working-directory: docs
+      - uses: actions/upload-artifact@v2
+        with:
+          name: progressreport
+          path: docs/progressreport/index.pdf
+
       - uses: stefanzweifel/git-auto-commit-action@v4
         with:
           commit_message: Update latex sources
