--- a/algorithm-w/tsconfig.json
+++ b/algorithm-w/tsconfig.json
@@ -6,6 +6,10 @@
     "esModuleInterop": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
-    "outDir": "./dist"
-  }
+    "outDir": "./dist",
+    "declaration": true
+  },
+  "include": [
+    "src/**/*.ts"
+  ]
 }
