--- a/algorithm-w/package.json
+++ b/algorithm-w/package.json
@@ -5,12 +5,16 @@
     "build": "tsc",
     "test": "jest"
   },
+  "main": "./dist/index",
+  "types": "./dist/index.d.ts",
   "devDependencies": {
-    "@types/jest": "^26.0.15",
-    "jest": "^26.6.1",
-    "ts-jest": "^26.4.3",
-    "ts-node": "^9.0.0",
-    "typescript": "^4.0.5"
+    "@types/jest": "^26.0.16",
+    "jest": "^26.6.3",
+    "ts-jest": "^26.4.4",
+    "ts-node": "^9.1.0",
+    "typescript": "^4.1.2"
   },
-  "dependencies": {}
+  "dependencies": {
+    "language": "file:../language"
+  }
 }
