--- a/web/package.json
+++ b/web/package.json
@@ -6,14 +6,15 @@
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.1.2",
     "@testing-library/user-event": "^12.2.2",
-    "@types/jest": "^26.0.15",
-    "@types/node": "^12.19.4",
+    "@types/jest": "^26.0.16",
+    "@types/node": "^12.19.8",
     "@types/react": "^16.9.56",
     "@types/react-dom": "^16.9.9",
     "algorithm-w": "file:../algorithm-w",
+    "language": "file:../language",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-scripts": "4.0.0",
+    "react-scripts": "^4.0.1",
     "typescript": "^4.0.5"
   },
   "scripts": {
