--- a/.github/workflows/language.yaml
+++ b/.github/workflows/language.yaml
@@ -1,12 +1,10 @@
-name: web
+name: language
 
 on:
   push:
     paths:
-    - '.github/workflows/web.yaml'
+    - '.github/workflows/language.yaml'
     - 'language/**'
-    - 'algorithm-w/**'
-    - 'web/**'
 
 jobs:
   build:
@@ -29,26 +27,12 @@ jobs:
       - name: 'language: Install dependencies'
         working-directory: language
         run: npm ci
+      - name: 'language: Lint'
+        working-directory: language
+        run: npm run lint --if-present
       - name: 'language: Build'
         working-directory: language
         run: npm run build --if-present
-
-      - name: 'algorithm-w: Install dependencies'
-        working-directory: algorithm-w
-        run: npm ci
-      - name: 'algorithm-w: Build'
-        working-directory: algorithm-w
-        run: npm run build --if-present
-
-      - name: 'web: Install dependencies'
-        working-directory: web
-        run: npm ci
-      - name: 'web: Lint'
-        working-directory: web
-        run: npm run lint --if-present
-      - name: 'web: Build'
-        working-directory: web
-        run: npm run build --if-present
-      - name: 'web: Test'
-        working-directory: web
+      - name: 'language: Test'
+        working-directory: language
         run: npm run test --if-present
