--- a/web/package.json
+++ b/web/package.json
@@ -17,6 +17,7 @@
     "react-scripts": "^4.0.1",
     "typescript": "^4.0.5"
   },
+  "homepage": ".",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
