--- a/.github/workflows/web.yaml
+++ b/.github/workflows/web.yaml
@@ -53,6 +53,7 @@ jobs:
         working-directory: web
         run: npm run test --if-present
       - name: 'web: Deploy'
+        if: github.ref == 'refs/heads/master'
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
