--- a/web/package.json
+++ b/web/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^12.19.8",
     "@types/react": "^16.9.56",
     "@types/react-dom": "^16.9.9",
+    "algorithm-m": "file:../algorithm-m",
     "algorithm-w": "file:../algorithm-w",
     "language": "file:../language",
     "react": "^17.0.1",
