--- a/.github/workflows/web.yaml
+++ b/.github/workflows/web.yaml
@@ -7,6 +7,7 @@ on:
     - 'language/**'
     - 'algorithm-w/**'
     - 'algorithm-m/**'
+    - 'algorithm-w-prime/**'
     - 'web/**'
 
 jobs:
@@ -39,6 +40,13 @@ jobs:
         run: npm ci
       - name: 'algorithm-w: Build'
         working-directory: algorithm-w
+        run: npm run build --if-present
+
+      - name: 'algorithm-w-prime: Install dependencies'
+        working-directory: algorithm-w-prime
+        run: npm ci
+      - name: 'algorithm-w-prime: Build'
+        working-directory: algorithm-w-prime
         run: npm run build --if-present
 
       - name: 'algorithm-m: Install dependencies'
