--- a/.github/workflows/finalreport.yaml
+++ b/.github/workflows/finalreport.yaml
@@ -15,9 +15,7 @@ jobs:
       - name: Checkout ${{ github.sha }}
         uses: actions/checkout@v2
       - name: Install dependencies
-        run: |
-          sudo apt install texlive-latex-extra texlive-bibtex-extra
-          sudo npm install -g gdoc2latex@3.0.4
+        run: sudo apt install texlive-latex-extra texlive-bibtex-extra latexmk
 
       - name: Build finalreport
         run: ./build.sh
