--- a/algorithm-w/package.json
+++ b/algorithm-w/package.json
@@ -1,20 +1,20 @@
 {
   "name": "algorithm-w",
   "version": "1.0.0",
+  "type": "module",
   "scripts": {
     "build": "tsc",
-    "test": "jest"
+    "test": "vitest run"
   },
   "main": "./dist/index",
   "types": "./dist/index.d.ts",
   "devDependencies": {
-    "@types/jest": "^26.0.16",
-    "jest": "^26.6.3",
-    "ts-jest": "^26.4.4",
     "ts-node": "^9.1.0",
-    "typescript": "^4.1.2"
+    "type-test-helpers": "*",
+    "typescript": "^5.7.3",
+    "vitest": "^3.0.5"
   },
   "dependencies": {
-    "language": "file:../language"
+    "language": "*"
   }
 }
