--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -29,9 +29,10 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Build & Test
+      - name: Build, Lint and Test
         run: |
           npm run build
+          npm run lint
           npm run test
 
       # Deploy web app if on master branch
