--- a/web/package.json
+++ b/web/package.json
@@ -1,47 +1,34 @@
 {
   "name": "web",
   "version": "1.0.0",
-  "private": true,
+  "type": "module",
   "dependencies": {
+    "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^11.1.2",
     "@testing-library/user-event": "^12.2.2",
     "@types/node": "^22.13.0",
-    "@types/react": "^17.0.83",
-    "@types/react-dom": "^17.0.26",
+    "@types/react": "^19.0.8",
+    "@types/react-dom": "^19.0.3",
+    "@types/testing-library__jest-dom": "^5.14.9",
     "@vitejs/plugin-react": "^4.3.4",
     "algorithm-m": "*",
     "algorithm-w": "*",
     "algorithm-w-prime": "*",
     "language": "*",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-scripts": "^5.0.1",
-    "typescript": "^4.0.5",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "typescript": "^5.7.3",
+    "vite": "^6.0.11",
     "vitest": "^3.0.5"
   },
   "homepage": ".",
   "scripts": {
     "start": "npm run start:dev",
     "build": "npm run build:prod",
-    "start:dev": "REACT_APP_STAGE=dev react-scripts start",
-    "build:dev": "REACT_APP_STAGE=dev react-scripts build",
-    "start:prod": "REACT_APP_STAGE=prod react-scripts start",
-    "build:prod": "REACT_APP_STAGE=prod react-scripts build",
-    "test": "vitest run",
-    "eject": "react-scripts eject"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version"
-    ]
-  },
-  "devDependencies": {
-    "@testing-library/jest-dom": "^6.6.3",
-    "@types/testing-library__jest-dom": "^5.14.9"
+    "start:dev": "NODE_ENV=development vite",
+    "build:dev": "NODE_ENV=development tsc && vite build",
+    "start:prod": "NODE_ENV=production vite",
+    "build:prod": "NODE_ENV=production tsc && vite build",
+    "test": "vitest run"
   }
 }
