Update testing libs, remove unnecessary deps

--- a/web/package.json
+++ b/web/package.json
@@ -4,16 +4,16 @@
   "type": "module",
   "dependencies": {
     "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^11.1.2",
-    "@testing-library/user-event": "^12.2.2",
-    "@types/node": "^22.13.0",
+    "@testing-library/react": "^16.2.0",
+    "@testing-library/user-event": "^14.6.1",
+    "@types/node": "^22.13.1",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
-    "@types/testing-library__jest-dom": "^5.14.9",
     "@vitejs/plugin-react": "^4.3.4",
     "algorithm-m": "*",
     "algorithm-w": "*",
     "algorithm-w-prime": "*",
+    "jsdom": "^26.0.0",
     "language": "*",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
